update dependencies now that grunt 0.4 is released

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grunt-symbolic-link",
   "description": "Create a symlink between paths",
-  "version": "0.3.0rc1",
+  "version": "0.3.0",
   "homepage": "https://github.com/mintbridge/grunt-symbolic-link",
   "author": {
     "name": "Paul Dixon",
@@ -28,13 +28,13 @@
     "test": "grunt test"
   },
   "dependencies": {
-    "grunt": "0.4.0rc8",
+    "grunt": "0.4.0",
     "mkdirp": "~0.3.1",
     "rimraf": "~2.0.3"
   },
   "devDependencies": {
-    "grunt-contrib-clean": "0.4.0rc6",
-    "grunt-contrib-nodeunit": "0.1.2rc6"
+    "grunt-contrib-clean": "0.4.0",
+    "grunt-contrib-nodeunit": "0.1.2"
   },
   "keywords": [
     "gruntplugin",
