--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
     "grunt-contrib-clean": "0.4.0",
     "grunt-contrib-nodeunit": "0.1.2"
   },
+  "peerDependencies": {
+    "grunt": "0.4.x"
+  },
   "keywords": [
     "gruntplugin",
     "symlink"
