--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "node": "*"
   },
   "scripts": {
-    "test": "grunt test"
+    "test": "./node_modules/grunt-cli/bin/grunt test"
   },
   "dependencies": {
     "grunt": "0.4.0",
@@ -33,6 +33,7 @@
     "rimraf": "~2.0.3"
   },
   "devDependencies": {
+    "grunt-cli": "0.1.6",
     "grunt-contrib-clean": "0.4.0",
     "grunt-contrib-nodeunit": "0.1.2"
   },
